[gd_scene load_steps=7 format=2]

[ext_resource path="res://Area2D.gd" type="Script" id=1]
[ext_resource path="res://airballoon1.png" type="Texture" id=2]
[ext_resource path="res://RushingWind.png" type="Texture" id=3]
[ext_resource path="res://SFX_-_swoosh_04.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 84.21
gravity = Vector3( 0, -90, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 63.36
radial_accel_random = 0.23
angle = 128.3
scale = 2.0
scale_random = 0.09
color = Color( 0.890196, 0.156863, 0.156863, 1 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="CDTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["dangerous"]]
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 7.33333, 18, 26.6667, -1.33333, 26.6667, -21.3333, 14, -28.6667, -15.3333, -28.6667, -27.3333, -20.6667, -27.3333, -0.666667, -7.33333, 18, -7.33333, 29.3333, 7.33333, 29.3333 )

[node name="Charge1" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 45 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Charge2" type="Sprite" parent="."]
visible = false
position = Vector2( -25, 45 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Charge3" type="Sprite" parent="."]
visible = false
position = Vector2( 25, 45 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 22 )
amount = 25
lifetime = 0.5
explosiveness = 0.21
process_material = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="CDTimer" to="." method="_on_CDTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
